tests/functional/lang/eval-fail-readFileType-toString-not-function.err.exp
error:
       … while calling the 'readFileType' builtin
         at /pwd/lang/eval-fail-readFileType-toString-not-function.nix:1:1:
            1| builtins.readFileType { __toString = "not a function"; }
             | ^
            2|

       … while calling the `__toString` attribute
         at /pwd/lang/eval-fail-readFileType-toString-not-function.nix:1:25:
            1| builtins.readFileType { __toString = "not a function"; }
             |                         ^
            2|

       error: attempt to call something which is not a function but a string: "not a function"
       at /pwd/lang/eval-fail-readFileType-toString-not-function.nix:1:25:
            1| builtins.readFileType { __toString = "not a function"; }
             |                         ^
            2|
